# tealeaf

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  codecov.yml  release.json  throwawaytest_array.json  throwawaytest_array.tl
accuracy-benchmark/: Cargo.toml  README.md
accuracy-benchmark/config/: models.toml
accuracy-benchmark/evidence/: README.md
accuracy-benchmark/evidence/2026-02-13/: README.md  analysis.tl  summary.json
accuracy-benchmark/evidence/2026-02-13/prompts/: real-fin-001-toon.txt  real-fin-002-tl.txt  real-fin-002-toon.txt  real-health-001-json.txt  real-health-001-tl.txt  real-health-001-toon.txt  real-health-002-tl.txt  real-health-002-toon.txt  real-hr-001-json.txt  real-hr-001-toon.txt  real-hr-002-toon.txt  real-legal-001-toon.txt  real-legal-002-tl.txt  real-re-001-tl.txt  real-re-001-toon.txt  real-re-002-json.txt  real-re-002-tl.txt  real-re-002-toon.txt  real-retail-001-json.txt  real-retail-001-tl.txt  real-retail-002-tl.txt  real-retail-002-toon.txt  real-tech-001-json.txt  real-tech-001-tl.txt  real-tech-002-tl.txt  real-tech-002-toon.txt
accuracy-benchmark/evidence/2026-02-13/responses/: real-fin-001-anthropic-json.txt  real-fin-001-anthropic-tl.txt  real-fin-001-anthropic-toon.txt  real-fin-001-openai-json.txt  real-fin-001-openai-tl.txt  real-fin-001-openai-toon.txt  real-fin-002-anthropic-json.txt  real-fin-002-anthropic-tl.txt  real-fin-002-anthropic-toon.txt  real-fin-002-openai-json.txt  real-fin-002-openai-tl.txt  real-fin-002-openai-toon.txt  real-health-001-anthropic-json.txt  real-health-001-anthropic-tl.txt  real-health-001-anthropic-toon.txt  real-health-001-openai-json.txt  real-health-001-openai-tl.txt  real-health-001-openai-toon.txt  real-health-002-anthropic-json.txt  real-health-002-anthropic-tl.txt  real-health-002-anthropic-toon.txt  real-health-002-openai-json.txt  real-health-002-openai-tl.txt  real-health-002-openai-toon.txt  real-hr-001-anthropic-json.txt  real-hr-001-anthropic-tl.txt  real-hr-001-anthropic-toon.txt  real-hr-001-openai-json.txt  real-hr-001-openai-tl.txt  real-hr-001-openai-toon.txt  real-hr-002-anthropic-json.txt  real-hr-002-anthropic-tl.txt  real-hr-002-anthropic-toon.txt  real-hr-002-openai-json.txt  real-hr-002-openai-tl.txt  real-hr-002-openai-toon.txt  real-legal-001-anthropic-json.txt  real-legal-001-anthropic-tl.txt  real-legal-001-anthropic-toon.txt  real-legal-001-openai-json.txt  (+44 more)
accuracy-benchmark/evidence/2026-02-14/: README.md  analysis.tl  summary.json
accuracy-benchmark/evidence/2026-02-14-01/: README.md  analysis.tl  summary.json
accuracy-benchmark/evidence/2026-02-14-01/prompts/: real-fin-001-json.txt  real-fin-001-tl.txt  real-fin-001-toon.txt  real-fin-002-json.txt  real-fin-002-tl.txt  real-fin-002-toon.txt  real-health-001-json.txt  real-health-001-tl.txt  real-health-001-toon.txt  real-health-002-json.txt  real-health-002-tl.txt  real-health-002-toon.txt  real-hr-001-json.txt  real-hr-001-tl.txt  real-hr-001-toon.txt  real-hr-002-json.txt  real-hr-002-tl.txt  real-hr-002-toon.txt  real-legal-001-json.txt  real-legal-001-tl.txt  real-legal-001-toon.txt  real-legal-002-json.txt  real-legal-002-tl.txt  real-legal-002-toon.txt  real-re-001-json.txt  real-re-001-tl.txt  real-re-001-toon.txt  real-re-002-tl.txt  real-re-002-toon.txt  real-retail-001-json.txt  real-retail-001-tl.txt  real-retail-001-toon.txt  real-retail-002-json.txt  real-retail-002-tl.txt  real-retail-002-toon.txt  real-tech-001-json.txt  real-tech-001-tl.txt  real-tech-001-toon.txt  real-tech-002-json.txt  real-tech-002-tl.txt  (+1 more)
accuracy-benchmark/evidence/2026-02-14-01/responses/: real-fin-001-anthropic-json.txt  real-fin-001-anthropic-tl.txt  real-fin-001-anthropic-toon.txt  real-fin-001-openai-json.txt  real-fin-001-openai-tl.txt  (+79 more)
accuracy-benchmark/examples/: convert_formats.rs  tl_roundtrip.rs  toon_roundtrip.rs
accuracy-benchmark/results/sample/: analysis.tl  summary.json
accuracy-benchmark/scripts/: count_tokens.py  generate_charts.py  validate_tokens.py
accuracy-benchmark/src/: config.rs  lib.rs  main.rs
accuracy-benchmark/src/analysis/: comparator.rs  metrics.rs  mod.rs  scoring.rs
accuracy-benchmark/src/providers/: anthropic.rs  mod.rs  openai.rs  traits.rs
accuracy-benchmark/src/reporting/: mod.rs  pax_writer.rs  tl_writer.rs
accuracy-benchmark/src/runner/: executor.rs  mod.rs  rate_limiter.rs
accuracy-benchmark/src/tasks/: categories.rs  loader.rs  mod.rs
accuracy-benchmark/tasks/: format_hints.json  real.json  synthetic.json
pax-core/: Cargo.toml
pax-core/benches/common/: data.rs  structs.rs
pax-core/benches/scenarios/: large_array.rs  mixed_types.rs  small_object.rs  tabular_data.rs
pax-core/examples/: create_test_fixtures.rs  size_report.rs
pax-core/src/: lexer.rs  lib.rs  parser.rs  reader.rs  types.rs  writer.rs
pax-core/tests/: canonical.rs
pax-ffi/: Cargo.toml  cbindgen.toml  pax.h
spec/: PAX_SPEC.md  (+1 more)
tealeaf-core/: Cargo.toml  README.md  build.rs
tealeaf-core/benches/: benchmarks.rs
tealeaf-core/benches/common/: data.rs  mod.rs
tealeaf-core/benches/scenarios/: large_array.rs  mixed_types.rs  mod.rs  nested_structs.rs  small_object.rs  tabular_data.rs
tealeaf-core/benches_proto/: messages.proto
tealeaf-core/examples/: create_test_fixtures.rs  size_report.rs
tealeaf-core/fuzz/: Cargo.toml
tealeaf-core/fuzz/dictionaries/: json.dict  tl.dict
tealeaf-core/fuzz/fuzz_targets/: fuzz_get_path.rs  fuzz_json.rs  fuzz_json_schemas.rs  fuzz_parse.rs  fuzz_reader.rs  fuzz_roundtrip.rs  fuzz_serialize.rs  fuzz_structured.rs
tealeaf-core/src/: builder.rs  convert.rs  lexer.rs  lib.rs  main.rs  parser.rs  reader.rs  types.rs  writer.rs
tealeaf-core/tests/: canonical.rs  cli_integration.rs  derive.rs  property.rs
tealeaf-core/tests/fixtures/: retail_orders_different_shape.rs
tealeaf-derive/: Cargo.toml  README.md
tealeaf-derive/src/: attrs.rs  from_tealeaf.rs  lib.rs  schema.rs  to_tealeaf.rs  util.rs
tealeaf-ffi/: Cargo.toml  build.rs  cbindgen.toml  tealeaf.h
tealeaf-ffi/src/: lib.rs
(+406 files in other folders)
