[workspace]
members = ["tealeaf-core", "tealeaf-derive", "tealeaf-ffi", "accuracy-benchmark"]
resolver = "2"

[workspace.package]
version = "2.0.0-beta.3"
edition = "2021"
authors = ["TeaLeaf Contributors"]
license = "MIT"
repository = "https://github.com/krishjag/tealeaf"

[workspace.dependencies]
tealeaf-core = { path = "tealeaf-core", version = "2.0.0-beta.3" }
tealeaf-derive = { path = "tealeaf-derive", version = "2.0.0-beta.3" }
thiserror = "1.0"
memmap2 = "0.9"
crc32fast = "1.3"
flate2 = "1.0"
indexmap = "2"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[profile.release]
lto = true
codegen-units = 1
