[package]
name = "pax-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Schema-aware document format with human-readable text and compact binary"
keywords = ["serialization", "schema", "binary", "config"]
categories = ["encoding", "config", "parser-implementations"]

[lib]
name = "pax"
path = "src/lib.rs"

[[bin]]
name = "pax"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
memmap2.workspace = true
crc32fast.workspace = true
flate2.workspace = true
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
ciborium = "0.2"
bincode = "1.3"
prost = "0.13"

[build-dependencies]
prost-build = "0.13"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "size_report"
path = "examples/size_report.rs"
