[package]
name = "pax-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "C FFI bindings for the Pax format library"

[lib]
name = "pax_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
pax-core.workspace = true

[build-dependencies]
cbindgen = "0.27"
