[package]
name = "tealeaf-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Schema-aware data format with human-readable text and compact binary"
keywords = ["serialization", "schema", "binary", "config"]
categories = ["encoding", "config", "parser-implementations"]
exclude = ["benches_proto/"]
readme = "README.md"

[lib]
name = "tealeaf"
path = "src/lib.rs"

[[bin]]
name = "tealeaf"
path = "src/main.rs"

[features]
default = []
derive = ["dep:tealeaf-derive"]

[dependencies]
thiserror.workspace = true
memmap2.workspace = true
crc32fast.workspace = true
flate2.workspace = true
serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
indexmap.workspace = true
tealeaf-derive = { workspace = true, optional = true }
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"

[dev-dependencies]
tealeaf-derive = { workspace = true }
tempfile = "3.0"
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
rmp-serde = "1.3"
ciborium = "0.2"
bincode = "1.3"
prost = "0.13"
proptest = "1.4"

[build-dependencies]
prost-build = "0.13"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "size_report"
path = "examples/size_report.rs"
