[package]
name = "tealeaf-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
tealeaf = { path = "..", package = "tealeaf-core" }
tempfile = "3"

# Prevent this from interfering with the main workspace
[workspace]

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
doc = false

[[bin]]
name = "fuzz_reader"
path = "fuzz_targets/fuzz_reader.rs"
doc = false

[[bin]]
name = "fuzz_json"
path = "fuzz_targets/fuzz_json.rs"
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_serialize"
path = "fuzz_targets/fuzz_serialize.rs"
doc = false

[[bin]]
name = "fuzz_json_schemas"
path = "fuzz_targets/fuzz_json_schemas.rs"
doc = false

[[bin]]
name = "fuzz_structured"
path = "fuzz_targets/fuzz_structured.rs"
doc = false

[[bin]]
name = "fuzz_get_path"
path = "fuzz_targets/fuzz_get_path.rs"
doc = false
